--- a/style.css
+++ b/style.css
@@ -407,12 +407,13 @@ header {
 
   .about-content .image {
     margin-bottom: 20px;
+    position: relative;
   }
 
   .about-content .about-text {
     margin: 0 auto;
     max-width: 450px;
-    text-align: center;
+    text-align: left;
   }
 
   .about-Education,
@@ -423,7 +424,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    text-align: left;
   }
 
   .about-Education .left-side h3,
@@ -436,6 +437,7 @@ header {
   .about-Education .right-side ul {
     padding-left: 20px;
     margin: 0;
+    text-align: left;
   }
 }
 
