--- a/style.css
+++ b/style.css
@@ -79,15 +79,12 @@ cursor: pointer;
 
 .sidemenu-toggler span {
 display: block;
-width: 100%;
-height: 2px;
+/* width: 100%;
+height: 2px; */
 background-color: white;
 margin-bottom: 4px;
 }
 
-.sidemenu-toggler span:last-child {
-margin-bottom: 0;
-}
 .sidemenu-toggler {
 display: none;
 flex-direction: column;
@@ -155,7 +152,7 @@ top: 0px;
 right: 20px;
 width: 40px;
 height: 40px;
-background-image: url(images/hamburegrmenuclose.png);
+/* background-image: url(images/hamburegrmenuclose.png); */
 background-size: cover;
 background-position: center;
 cursor: pointer;
@@ -163,59 +160,70 @@ cursor: pointer;
 
 /* Mobile View header */
 @media (max-width: 767px) {
-.logo img {
-  width: 250px;
-  padding-left: 1px;
-}
+  .logo img {
+    width: 250px;
+    padding-left: 1px;
+  }
 
-.sidemenu-toggler {
-  display: block;
-  width: 40px;
-  height: 40px;
-  background-color: black;
-  position: fixed;
-  top: 55px;
-  right: 20px;
-  cursor: pointer;
-}
+  .sidemenu-toggler {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: black;
+    position: fixed;
+    top: 55px;
+    right: 20px;
+    cursor: pointer;
+  }
 
-.menu {
-  display: none;
-}
+  .sidemenu-toggler span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #fff; /* Set the color of the lines */
+    margin: 5px auto; /* Adjust the spacing between the lines */
+    transition: background-color 0.3s ease; /* Add a smooth transition effect */
+  }
 
-.sidemenu {
-  display: none;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Add a transparent background color */
-  backdrop-filter: blur(10px); /* Add the blur effect */
-  z-index: 9999;
-  width: 200px;
-  padding: 25px;
-  text-align: right;
-  
-}
+  .menu {
+    display: none;
+  }
 
-.sidemenu.open {
-  display: block;
-  max-width: 150px;
+  .sidemenu {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Add a transparent background color */
+    backdrop-filter: blur(10px); /* Add the blur effect */
+    z-index: 9999;
+    width: 200px;
+    padding: 25px;
+    text-align: right;
+    left: -200px;
+    transition: left 0.3s ease;
+  }
 
-}
+  .sidemenu.open {
+    display: block;
+    max-width: 150px;
+    left: 0;
+  }
 
-.sidemenu .close {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  position: absolute;
-  top: 40px;
-  right: 20px;
-  font-size: 24px;
+  .sidemenu .close {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    position: absolute;
+    top: 40px;
+    right: 80px;
+    font-size: 24px;
+  }
 }
 
 /* Mobile View header - Fixed position when scrolling up */
 header {
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 999;
   background-color: #000000; /* Add your preferred background color for the sticky header */
@@ -264,6 +272,7 @@ header.sticky {
   color: white;
   font-size: 20px;
 }
+
 .sidemenu .social-icons {
   margin-top: -30px;
   margin-right: 0; /* Add negative margin to create space between social icons */
@@ -279,6 +288,7 @@ header.sticky {
   color: white;
   font-size: 20px;
 }
+
 .sidemenu .call-me-button {
   display: block;
   margin-top: 20px;
@@ -289,9 +299,18 @@ header.sticky {
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
-  }
+}
+/* Add styles for the X icon when the menu is open */
+.sidemenu-toggler.open span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.sidemenu-toggler.open span:nth-child(2) {
+  opacity: 0;
 }
 
+.sidemenu-toggler.open span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
 /* Header CSS Ends Here */
 /* Main Body */
 
