--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html {
   background-color: black;
 }
 
+*{
+  font-family: 'Poppins', sans-serif;
+}
 /* Custom Scrollbar Styles */
 ::-webkit-scrollbar {
 width: 7px;
@@ -13,11 +16,11 @@ background: #000;
 }
 
 ::-webkit-scrollbar-thumb {
-background: #ffeb3b;
+background: #ff004f;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-background: #ffeb3b;
+background: #ff004f;
 }
 
 
@@ -266,13 +269,13 @@ cursor: pointer;
   text-decoration: underline;
 }
 
-.social-icons {
+/* .social-icons {
   list-style: none;
   padding: 0;
   margin-top: 40px;
   display: flex;
   justify-content: center;
-}
+} */
 
 .social-icons li {
   margin-right: 10px;
@@ -365,7 +368,7 @@ body {
 }
 
 .title {
-    background-color: silver;
+    background-color: #201f1f;
     font-size: 14px;
     line-height: 24px;
     padding: 10px 30px;
@@ -379,6 +382,10 @@ body {
 
 .designation {
     font-size: 30px;
+
+}
+.name{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .designation::before {
@@ -498,6 +505,7 @@ body {
     max-width: 100%;
     height: auto;
     padding-left: 5px;
+    padding-top: 50px;
     border-radius: 20px; /* Add border radius */
     box-shadow: 0px 0px 20px; /* Set the box shadow */
   }
@@ -515,6 +523,9 @@ body {
     font-size: 45px;
   }
 
+  .designation{
+    font-size: 18px;
+  }
   .designation::before {
     content: "";
     display: inline-block;
@@ -533,6 +544,10 @@ body {
     font-size: 20px;
   }
 }
+
+
+
+
 
 /* About Me CSS STARTS HERE */
 #about .container {
@@ -920,149 +935,189 @@ body {
   }
 }
 /* Work Experience CSS Ends Here */
+/* Footer */
+ .container {
+  padding: 10px 10%;
+}
+ .sub-title {
+  font-family: 'Poppins', sans-serif;
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-/* Download Resume Button CSS Starts here */
-#resume-button {
+ .contact-left {
+  flex-basis: 35%;
+}
+
+.contact-right {
+  flex-basis: 500px;
+  padding-top: 45px;
+}
+
+.contact-left p {
+  margin-top: 30px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.contact-left p i {
+  color: #ffffff;
+  margin-right: 15px;
+  font-size: 25px;
+}
+
+.social-icons {
+  margin-top: 30px;
+}
+
+.social-icons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #ffffff;
+  /* display: inline-block; */
+  justify-content:flex-start;
+  transition: color 0.5s, transform 0.5s;
+}
+
+.social-icons a:hover {
+  color: #ff004f;
+  transform: translateY(-5px);
+}
+
+.btn.btn2 {
+  display: inline-block
+}
+
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ffffff;
+  padding: 14px 50px;
+  border-radius: 6px;
+  color: #fff;
+  text-decoration: none;
+  transition: background 0.75s;
+}
+
+.btn:hover {
+  background: #ff004f;
+  border: none;
+}
+
+
+.btn.btn3 {
+  background: transparent;
+  margin-top: 30px;
+  transition: background 0.5;
+
+}
+
+.btn.btn3:hover {
+  background: #ff004f;
+}
+
+.contact-right form {
+  width: 100%;
+}
+
+.contact-right{
+  flex-basis: 60%;
+}
+
+.contact-right form{
+  width: 100%;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
+}
+
+@media (max-width: 600px) {
+  .contact-left,
+  .contact-right {
+      width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .sub-title{
+    font-family: 'Poppins', sans-serif;
+    font-size: 45px;
+  }
+
+  .contact-left p i{
+    font-size: 22px;
+  }
+
+  .contact-left p{
+    font-size: 18px;
+  }
+
+  .social-icons{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .social-icons a {
+      margin-right: 5px;
+  }
+
+  .btn {
+      padding: 8px 15px;
+  }
+
+  .btn.btn2{
+    display: block;
+  }
+
+  form input, form textarea{
+    width: 270px;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+  }
+
+  .btn.btn3{
+    display: block;
+    padding: 20px 75px
+  }
+
+}
+
+/* Footer */
+.copyright {
+  width: 100%;
   text-align: center;
+  padding: 25px 0;
+  font-weight: 300;
   margin-top: 20px;
 }
 
-#resume-button a {
-  display: inline-block;
-  background-color: transparent;
-  color: #fff;
-  border: 2px solid #ffeb3b;
-  padding: 10px 20px;
-  font-size: 18px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-  position: relative;
-  overflow: hidden;
-}
-
-#resume-button a .button-text {
-  display: block;
-}
-
-#resume-button a .dot-spinner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+nav .fas {
   display: none;
 }
-#resume-button a:hover {
-  background-color: #ffeb3b;
-}
-#resume-button a.downloading .button-text {
-  display: none;
-}
-
-#resume-button a.downloading .dot-spinner {
-  display: flex;
-}
-
-@media (max-width: 768px) {
-  #resume-button a {
-    width: auto;
-  }
-}
-/* Download Resume Button CSS Ends here */
-
-
-/* Contact ME Form  */
-#contact {
-    background-color: transparent;
-    padding: 50px 0;
-    text-align: center;
-    color: #fff;
-}
-
-#contact h2 {
-    margin-bottom: 30px;
-}
-
-form {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-input,
-textarea {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    font-size: 16px;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    background-color: transparent;
-    color: #fff;
-    box-sizing: border-box;
-}
-
-textarea {
-    height: 120px;
-}
-
-button {
-    width: 100%;
-    background-color: transparent;
-    color: #fff;
-    border: 2px solid #ffeb3b;
-    padding: 10px 20px;
-    font-size: 18px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.custom-container-class {
-  width: 20px;
-  height: 10px;
-}
-
-@media (max-width: 480px) {
-    #contact form {
-      max-width: 100%;
-      padding: 0 10px;
-    }
-}
-
-button:hover {
-    background-color: #ffeb3b;
-}
-
-footer {
-    background-color: transparent;
-    color: #fff;
-    text-align: center;
-    padding: 5px;
-}
-
-.scroll-indicator {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background-color: #ffeb3b;
-    z-index: 9999;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-@media (max-width: 768px) {
-    .nav-links li {
-        display: block;
-        margin: 5px 0;
-    }
-}
-
-
 
 /*  Scroll To Top Button Starts Here  */
 #scrollToTopButton {
@@ -1072,7 +1127,7 @@ footer {
   right: 20px;
   width: 50px;
   height: 50px;
-  background-color: yellow;
+  background-color: #ff004f;
   border-radius: 50%;
   opacity: 0.5;
   text-decoration: none;
@@ -1100,15 +1155,15 @@ footer {
 
 .custom-popup-class {
   background-color: black;
-  color: gold;
+  color: #ff004f;
 }
 
 .custom-title-class {
-  color: gold;
+  color: #ff004f;
 }
 
 .custom-content-class {
-  color: gold;
+  color: #ff004f;
 }
 
 
