banner image updated

--- a/css/style.css
+++ b/css/style.css
@@ -832,7 +832,7 @@ h3 {
 }
 
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.jpg);
+  background-image: url(../img/banner/banner3.webp);
 }
 
 @media (max-width: 767px) {
