--- a/css/style.css
+++ b/css/style.css
@@ -1193,6 +1193,16 @@ h3 {
     margin-left: 0px;
   }
 }
+@media (min-width: 768px) and (max-width: 1024px) {
+  .our_loyers .single_loyers h3 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1F1F1F;
+    margin-top: 2px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+  }
+}
 
 
 
