--- a/css/style.css
+++ b/css/style.css
@@ -1895,9 +1895,10 @@ h2.certificates{
 }
 
 
-.justify-content-center {
-  -ms-flex-pack: center !important;
+.justify-content-center-w2c {
+  justify-content: center !important;
 }
+
 .check-container {
   width: 4.25rem;
   height: 5.5rem;
@@ -2004,6 +2005,7 @@ h2.certificates{
       opacity: 0.25;
   }
 }
+
 /* Mobile responsiveness */
 @media only screen and (max-width: 767px) {
   .check-container {
