--- a/css/style.css
+++ b/css/style.css
@@ -1439,11 +1439,26 @@ h3 {
   color: #FEFCF6;
 }
 
+
 @media (max-width: 767px) {
-  .appointment_area .appiontment_thumb img {
+  .appiontment_thumb.d-none.d-lg-block {
+    display: block !important;
     width: 100%;
+    height: auto;
+    object-fit: contain;
+    margin-left: -127px;
   }
 }
+
+@media (min-width: 768px) and (max-width: 991px){
+  .appiontment_thumb.d-none.d-lg-block {
+    display: block !important;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+}
+
 
 .appointment_area .appointment_info {
   position: relative;
