--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,152 @@ label {
   color: #fff; /* Set your desired color, in this case, white (#fff) */
 }
 
+/* Add this to your existing styles.css or create a new one */
+.hamburger-menu {
+  display: none; /* Initially hide for larger screens */
+  cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 9999;
+}
+
+.bar1 {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+.bar2 {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+.bar3 {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+.hamburger-menu.opened .bar1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.hamburger-menu.opened .bar2 {
+  opacity: 0;
+}
+
+.hamburger-menu.opened .bar3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9); 
+  backdrop-filter: blur(3px); 
+  z-index: 9998;
+  transition: left 0.3s ease; 
+}
+
+.mobile-menu-content {
+  padding: 20px;
+}
+
+.mobile-menu nav {
+  margin-top: 100px;
+  font-size: larger;
+  font-weight: 500;
+}
+
+.mobile-menu ul {
+  list-style: none;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.mobile-menu ul li {
+  margin: 20px 0;
+}
+
+/* Media query to show/hide elements based on screen size */
+@media only screen and (max-width: 768px) {
+  .hamburger-menu {
+    display: block;
+    margin-top: 10px;
+  }
+
+  .main-menu {
+    display: none; /* Hide the main menu for smaller screens */
+  }
+
+  /* Adjusted styles for the mobile menu when it's opened */
+  .mobile-menu {
+    transition: left 0.3s ease; /* Slide animation */
+  }
+
+  .mobile-menu.opened {
+    left: 0;
+  }
+
+  .logo-img {
+    width: 190px !important;
+    margin-left: 20px;
+  }
+
+  /* Transform hamburger icon to X when menu is open */
+  .hamburger-menu.opened .bar {
+    background-color: transparent; /* Set the color to transparent when menu is open */
+  }
+
+  .hamburger-menu.opened .bar1::before,
+  .hamburger-menu.opened .bar1::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 25px;
+    height: 3px;
+    background-color: #000;
+    transition: 0.4s;
+  }
+  .hamburger-menu.opened .bar2::before,
+  .hamburger-menu.opened .bar2::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 25px;
+    height: 3px;
+    background-color: #000;
+    transition: 0.4s;
+  }
+  .hamburger-menu.opened .bar3::before,
+  .hamburger-menu.opened .bar3::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 25px;
+    height: 3px;
+    background-color: #000;
+    transition: 0.4s;
+  }
+
+  .hamburger-menu.opened .bar::before {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .hamburger-menu.opened .bar::after {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+}
+
 
 /* Style for the sticky header */
 .sticky {
