--- a/css/style.css
+++ b/css/style.css
@@ -775,9 +775,9 @@ h3 {
   left: 0;
   right: 0;
   top: 0;
-  background: transparent;
   z-index: 999;
   background: #000;
+  border-bottom: 5px solid orange;
 }
 
 .header-area .main-header-area {
@@ -1045,11 +1045,12 @@ h3 {
 
 /* Home page banner */
 .slider_bg_1 {
-  background-image: url(../img/home_page_banner.webp);
+  background-image: url(../img/banner/F2.png);
   border-radius: 0; 
   padding: 20px 20px !important;
 }
 
+/* mobile view */
 @media (max-width: 767px),
        (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
        (width: 912px) and (height: 1368px),
@@ -1061,6 +1062,15 @@ h3 {
     background-image: url(../img/banner/banner3.webp);
   }
 }
+
+/* tablet view */
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
+       (width: 768px) and (height: 1024px) {
+  .slider_bg_1 {
+    background-image: url(../img/banner/F2.png); /* Update the path to your image */
+  }
+}
+
 
 
 
@@ -1182,7 +1192,7 @@ h3 {
 
 @media (min-width: 768px) and (max-width: 991px) {
   .slider_area_inner {
-    height: 500px;
+    height: 370px;
     
   }
 }
@@ -1196,7 +1206,7 @@ h3 {
 
 @media (min-width: 1200px) and (max-width: 1500px) {
   .slider_area_inner {
-    height: 600px;
+    height: 650px;
     background-position: right;
   }
 }
@@ -1207,7 +1217,7 @@ h3 {
 }
 
 .slider_area_inner .single_slider .slider_text h3 {
-  /* color: #ffffff; */
+  color: #ffffff;
   font-weight: 700;
   font-family: "Playfair Display", serif;
   font-size: 35px;
@@ -1256,6 +1266,7 @@ h3 {
   line-height: 32px;
   font-style: italic;
   font-family: 'Playfair Display';
+  color: #ffffff;
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
@@ -2666,8 +2677,6 @@ h2.certificates{
     opacity: 1;
   }
 }
-
-
 
 
 
