--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-weight: normal;
   font-style: normal;
   overflow-x: hidden;
+  background-color: #000000;
 }
 
 html {
@@ -55,7 +56,7 @@ button {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Playfair Display', serif;
-  color: #1F1F1F;
+  color: #ffffff;
 }
 
 h1 a,
@@ -75,19 +76,20 @@ ul {
 
 li {
   list-style: none;
+  color: white;
 }
 
-p {
+/* p {
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
-  color: #727272;
+  color: #ffffff;
   margin-bottom: 13px;
   font-family: "Poppins", sans-serif;
-}
+} */
 
 label {
-  color: #7e7e7e;
+  color: #ffffff;
   cursor: pointer;
   font-size: 14px;
   font-weight: 400;
@@ -344,9 +346,15 @@ label {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #fff; /* Change this to your desired background color */
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow effect */
-  z-index: 1000; /* Ensure it's above other elements */
+  background-color: #fff;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  
+}
+
+.logo-img {
+  pointer-events: none;
+  user-select: none;
 }
 
 h3 {
@@ -557,7 +565,7 @@ h3 {
   font-size: 42px;
   line-height: 48px;
   font-weight: 700;
-  color: #1F1F1F;
+  color: #ffffff;
 }
 
 @media (max-width: 767px) {
@@ -1040,8 +1048,8 @@ h3 {
 .single_loyers .icon i {
   font-size: 40px;
   color: #F2C64D;
+  transition: transform 0.3s ease;
 }
-
 
 /* Home page banner */
 .slider_bg_1 {
@@ -1565,9 +1573,9 @@ h3 {
 }
 
 .about_area {
-  background: #FFFDF8;
+  /* background: #FFFDF8; */
   padding-top: 150px;
-  padding-bottom: 120px;
+  padding-bottom: 45px;
   margin-right: 50px;
   margin-left: 50px;
   position: relative;
@@ -1596,14 +1604,17 @@ h3 {
 
 .about_area .single_about_info .about_thumb {
   overflow: hidden;
-  width: 280px;
-  height: 280px;
-  border-radius: 50%;
+  width: 270px;
+  height: 270px;
+  border-radius: 20px;
   margin: auto;
   position: relative;
+  background-color: #ffffff;
 }
+
 .single_loyers {
   margin-bottom: 20px; 
+  color: white;
 }
 .thumb {
   overflow: hidden;
@@ -1690,6 +1701,7 @@ h3 {
   margin-top: 27px;
   margin-bottom: 13px;
   font-weight: 400;
+  color: #ffffff;
 }
 
 @media (max-width: 767px) {
@@ -1714,6 +1726,7 @@ h3 {
   font-size: 16px;
   line-height: 28px;
   margin-bottom: 20px;
+  color: #ffffff;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -1769,6 +1782,12 @@ h3 {
 
 /* Contact Me */
 
+.appiontment_thumb {
+  background: white;
+  border-radius: 20px;
+}
+
+
 /* Adjustments for smaller screens */
 @media (max-width: 767px) {
   .appiontment_thumb {
@@ -1810,40 +1829,27 @@ h3 {
     align-items: center;
     justify-content: center;
     text-align: center;
-    flex-direction: row; /* Updated to horizontal arrangement */
+    flex-direction: row; 
   }
 
   .contactheading h3 {
-    margin-right: 20px; /* Adjust as needed */
+    margin-right: 20px;
     font-size: 42px;
     line-height: 48px;
     font-weight: 700;
   }
 
   .contactheading p {
-    margin: 0; /* Reset margin for paragraphs */
-    font-size: 16px; /* Adjust as needed */
-    color: #727272; /* Adjust text color as needed */
+    margin: 0; 
+    font-size: 16px;
+    color: #ffffff;
   }
-}
-/* Separate class for p tags within contactheading */
-.contactheadingtag p {
-  font-size: 16px; /* Adjust as needed */
-  color: #727272; /* Adjust text color as needed */
-  margin: 0; /* Reset margin for paragraphs */
-}
-
-/* Separate class for p tags within contactheading */
-.contactheadingtag p {
-  font-size: 16px; /* Adjust as needed */
-  color: #727272; /* Adjust text color as needed */
-  margin: 0; /* Reset margin for paragraphs */
 }
 
 /* Separate class for p tags within contactheading */
 .contactheadingtag p {
   font-size: 16px;
-  color: #727272;
+  color: #ffffff;
   margin: 0; /* Reset margin for paragraphs */
   margin-top: 10px; /* Adjust as needed for spacing between h3 and p */
 }
@@ -1938,6 +1944,8 @@ h3 {
   border-bottom: 1px solid #C7C7C7;
   margin-bottom: 26px;
   padding-bottom: 7px;
+  background-color: #000000;
+  color: white;
 }
 
 .appointment_area form input::placeholder,
@@ -1983,7 +1991,6 @@ h3 {
   justify-content: center;
   overflow: hidden;
   perspective: 1000px;
-  box-shadow: 0 0 0 5px #ffffff80;
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
@@ -2015,15 +2022,19 @@ h3 {
 .card__title {
   margin: 0;
   font-size: 24px;
-  color: #333;
+  color: #000000;
   font-weight: 700;
 }
 
 .card__description {
   margin: 10px 0 0;
   font-size: 14px;
-  color: #777;
+  color: #000000;
   line-height: 1.4;
+}
+
+.card__description p{
+  text-decoration: underline;
 }
 
 .card:hover {
@@ -2032,13 +2043,62 @@ h3 {
   backdrop-filter: blur(3px); 
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 20px;
+      margin-bottom: 50px;
+      padding: 0 20px; 
+  }
+
+  .card {
+      width: calc(25% - 20px); 
+      height: 200px; 
+  }
+
+  .card:hover .card__title,
+    .card:hover .card__description {
+        font-size: 12px;
+    }
+}
+
+
+
+/* Additional Effects for skills */
+.col-6.col-md-4.col-lg-4.col-xl-2:hover {
+  height: -webkit-calc(100% + 20px);
+  border: 1px solid #f7941d;
+  border-radius: 20px;
+
+}
+
+.single_loyers {
+  transition: transform 0.3s ease;
+}
+
+
+.single_loyers:hover {
+  transform: rotateY(360deg);
+  cursor: default;
+}
+
+.icon-wrapper {
+  transition: transform 0.3s ease;
+}
+
+.icon-wrapper:hover {
+  transform: rotateY(360deg);
+}
+
 
 /* formspree.io contact form css starts here */
 #my-form {
   margin: auto;
   padding: 20px;
   border-radius: 5px;
-  background-color: #fff;
+  padding-top: 70px;
 }
 
 label {
@@ -2082,10 +2142,6 @@ button:hover {
   font-weight: bold;
 }
 /* formspree.io contact form css ends here */
-
-
-
-
 
 @media (max-width: 991px) {
   .contact-section {
@@ -2162,15 +2218,17 @@ button:hover {
   font-size: 42px;
   line-height: 48px;
   font-weight: 700;
-  color: #000000;
 }
 
 .personal-project {
-  background-color: #ffffff;
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
   text-align: center;
+}
+
+.personal-project p{
+  color: white;
 }
 
 .screenshots {
@@ -2204,7 +2262,7 @@ button:hover {
     font-size: 42px;
     line-height: 48px;
     font-weight: 700;
-    color: #000000;
+    color: #ffffff;
   }
 }
 
@@ -2251,7 +2309,6 @@ button:hover {
   font-size: 42px;
   line-height: 48px;
   font-weight: 700;
-  color: #000000;
 }
 /* Style the list items with a dot icon */
 .bullet-list {
@@ -2264,16 +2321,35 @@ button:hover {
   margin-right: 8px; /* Adjust the spacing between the bullet and text */
   vertical-align: middle; /* Align the bullet vertically with the text */
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .image-responsive-first {
+    width: 100% !important;
+    height: 80% !important;
+    margin-top: 30px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .image-responsive-second {
+    width: 70% !important;
+    height: 76% !important;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+
 /* Experience css ends */
+
 /* certificate css starts */
 h2.certificates{
   text-align: center;
-  margin-top: 40px;
+  margin-top: 70px;
   margin-bottom: 40px;
   font-size: 42px;
   line-height: 48px;
   font-weight: 700;
-  color: #000000;
 }
 
 .certificate_screenshots {
@@ -2325,11 +2401,15 @@ h2.certificates{
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  border-top: 5px solid orange;
+  
 }
 
 .portfolio-footer .left img {
   width: 60px; /* Adjust the logo size as needed */
   margin-left: 46px;
+  pointer-events: none;
+  user-select: none;
 }
 
 .portfolio-footer .middle ul {
@@ -2682,22 +2762,17 @@ h2.certificates{
 
 /* Customize the default scrollbar for WebKit browsers */
 ::-webkit-scrollbar {
-  width: 10px; /* Adjust the width as needed */
+  width: 10px;
   border-radius: 6px;
+  
 }
 
 /* Thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #F2C64D; /* Change thumb color to red */
-  border-radius: 6px; /* Adjust the border radius as needed */
+  background-color: orange;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #534b4b; /* Change track background color */
-}
-
-/* Track on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #F2C64D; /* Change thumb color on hover */
-  border-radius: 6px;
+  background-color: #000000;
 }
